sf-metadata/force-app/main/default/objects/Heimdall_Backup_Config__c/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Heimdall will archive old records for this object based on Archive Age Days.</description>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>