sf-metadata/force-app/main/default/objects/Heimdall_Backup_Config__c/fields/Archive_Action__c.field-meta.xml
<CustomField>
    <fullName>Archive_Action__c</fullName>
    <description>Action to take when archiving records. Archive Only stores records in archive storage. Archive and Delete also removes them from Salesforce after archiving.</description>
    <label>Archive Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Archive Only</fullName>
                <default>true</default>
                <label>Archive Only</label>
            </value>
            <value>
                <fullName>Archive and Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>