sf-metadata/force-app/main/default/objects/Heimdall_Backup_Config__c/fields/Archive_Expression__c.field-meta.xml
<CustomField>
    <fullName>Archive_Expression__c</fullName>
    <description>Optional SOQL WHERE clause expression to further filter which records are archived. For example: Status = 'Closed'</description>
    <label>Archive Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>