sf-metadata/force-app/main/default/objects/Heimdall_Backup_Config__c/fields/AverageRecordsPerRun__c.field-meta.xml
<CustomField>
    <fullName>AverageRecordsPerRun__c</fullName>
    <description>Average number of records backed up per run. Calculated using weighted average (80% old, 20% new) to give more weight to recent history.</description>
    <label>Average Records Per Run</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>