sf-metadata/force-app/main/default/objects/Heimdall_Backup_Config__c/fields/ChangeFrequency__c.field-meta.xml
<CustomField>
    <fullName>ChangeFrequency__c</fullName>
    <description>Estimated change frequency based on backup history. Automatically updated by Heimdall based on average records per run.</description>
    <label>Change Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>