sf-metadata/force-app/main/default/objects/Heimdall_Backup_Config__c/fields/CheckCountFirst__c.field-meta.xml
<CustomField>
    <fullName>CheckCountFirst__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Heimdall will run a COUNT query before Bulk API to check if there are new records. This is automatically enabled after 3 consecutive empty backup runs.</description>
    <label>Check COUNT First</label>
    <type>Checkbox</type>
</CustomField>